JavaFX browser can get stuck in an infinite loop when calling path.getTotalLength()

XMLWordPrintable

    • web

        It seems that the WebView JavaFx Browser can get stuck in an infinite loop when calling getTotalLength() on a particular svg <path> object.

        Here are two Jsfiddles, the first one works, the second one gets in an infinite loop. The only difference is changing the last decimal of the path data from a 6 to a 7.

        http://jsfiddle.net/UBsu2/
        http://jsfiddle.net/UBsu2/1/

        This problem is also exhibited in Chrome and Safari, but not in Firefox and IE9.

              Assignee:
              Guru Hb (Inactive)
              Reporter:
              Guru Hb (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported: