8163582: JavaFX browser can get stuck in an infinite loop when calling path.getTotalLength()

Reviewed-by: arajkumar, kcr